feat(app): implement mobile resources and dsh integration